Fix center alignment at 992px

--- a/sx5_project/static/css/custom.css
+++ b/sx5_project/static/css/custom.css
@@ -1,23 +1,23 @@
 .nav-link-lg {
-    font-size: 1.2rem;
+    font-size: 1.2rem !important;
 }
 
 .navbar {
-    display: flex !important;
+    /* display: flex !important;
     align-items: center !important;
-    justify-content: space-between !important;
+    justify-content: space-between !important; */
     background-color: black !important;
 }
 
-.navbar-brand,
+/* .navbar-brand,
 .navbar-toggler {
     margin-top: auto !important;
     margin-bottom: auto !important;
     align-self: center !important;
-}
+} */
 
 .navbar-light .navbar-brand {
-    font-size: 1.8rem;
+    font-size: 1.8rem !important;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -182,26 +182,14 @@
         border-radius: 5%;
         padding-left: 0.25em;
         padding-right: 0.25em;
+        color: black !important;
     }
 }
 
 @media (min-width: 992px) {
-    .navbar-brand {
-        background-image: linear-gradient(to bottom,
-                #df1f1e 0%,
-                #df1f1e 16.666%,
-                #eda51f 16.666%,
-                #eda51f 33.333%,
-                #ece020 33.333%,
-                #ece020 50%,
-                #49ad3c 50%,
-                #49ad3c 66.666%,
-                #418fcf 66.666%,
-                #418fcf 83.333%,
-                #68267e 83.333%,
-                #68267e 100%) !important;
-        border-radius: 5%;
-        padding-left: 0.25em;
-        padding-right: 0.25em;
+    .navbar-nav {
+        flex-direction: row !important;
+        align-items: center !important;
+        justify-content: space-evenly !important;
     }
 }
